Implement registration and autologin