@@ -1,12 +1,15 @@
 package com.project.wab.service;
 
+import com.project.wab.domain.Role;
 import com.project.wab.domain.User;
+import com.project.wab.repository.RoleRepository;
 import com.project.wab.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 /**
@@ -16,12 +19,14 @@ import java.util.stream.StreamSupport;
 @RequiredArgsConstructor
 public class UserService {
     private final UserRepository userRepository;
+    private final RoleRepository roleRepository;
+    private final PasswordEncoder passwordEncoder;
 
     public List<User> getAllUsers() {
         Iterable<User> users = userRepository.findAll();
         return StreamSupport
                 .stream(users.spliterator(), false)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public User getUserById(Long id) {
@@ -39,6 +44,21 @@ public class UserService {
     public User findById(Long id) {
         return userRepository.findById(id).orElseThrow(() -> new RuntimeException("User not found"));
 
+    }
+
+    @Transactional
+    public void registerUser(String username, String email, String password) {
+        Role userRole = roleRepository.findByName("ROLE_USER")
+                .orElseThrow(() -> new RuntimeException("Default role not found"));
+
+        User user = new User();
+        user.setUsername(username);
+        user.setEmail(email);
+        user.setPassword(passwordEncoder.encode(password));
+        user.setEnabled(true);
+        user.setAccountNonLocked(true);
+        user.setRole(userRole);
+       userRepository.save(user);
     }
 }
 
